--- a/src/Login.css
+++ b/src/Login.css
@@ -1,33 +1,62 @@
-.main
+.main1
 {
     background-image: url("Background/login.jpg");
     background-size: cover;
     width: 100%;
     position: relative;
     overflow: hidden;
+    height: 800px;
 }
 
 
 
-.overlay{
+.overlay1{
     
     top: 0;left: 0;right: 0;bottom: 0;
     background-color: rgba(0, 0,0, 0.8);
+    height: 800px;
 }
 
-.head
+
+
+.head1
 {
     display: flex;
 }
 
-.logo
+
+
+.logo1
 {
     width: 10%;
     margin-left: 10%;
     margin-top: 1.5%;
+    display: none;
 }
 
-.SignInButton
+@media(min-width : 768px){
+    .logo1{
+        display: block;
+    }
+}
+
+.logo2
+{
+    display: none;
+}
+
+@media(max-width:768px)
+{
+    .logo2
+    {
+        width: 10%;
+        margin-left: 10%;
+        margin-top: 1.5%;
+        display: block;
+    }
+}
+
+.SignInButton1
 {
     height: 40px;
     width: 90px;
@@ -39,26 +68,57 @@
     margin-top: 1.5%;
 }
 
-.mid
+.base
 {
-     
+
+}
+
+.mid1
+{
+     width: 100%;
+     height: 300px;
+     margin-bottom: 5%;
+     margin-top: 7%;
 }
 
 .one
 {
     color: white;
-    font-size: 50px;
+    font-size: 60px;
     font-weight: bold;
     line-height: 1px;
-    margin-top: 10%;
+    
+}
+
+@media(max-width:768px){
+    .one
+{
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+    line-height: 1px;
+    margin-top: 20%;
+    
+}
 }
 
 .one1
 {
     color: white;
-    font-size: 50px;
+    font-size: 60px;
+    font-weight: bold;
+    line-height: -10px;
+}
+
+@media(max-width:768px){
+    .one1
+{
+    color: white;
+    font-size: 30px;
     font-weight: bold;
     line-height: 1px;
+    
+}
 }
 
 .two
@@ -73,7 +133,7 @@
     color: white;
 }
 
-.email
+.email1
 {
     margin-right: 1%;
     height: 50px;
@@ -88,7 +148,7 @@
 }
 
 
-.GetStartedButton
+.GetStartedButton1
 {
     all: unset;
     background-color: red;
@@ -100,12 +160,14 @@
     font-weight: bold;
 }
 
+
+
 .below
 {
     position: relative;
     background-color: red;
     height: 100px;
-    margin-top: -7%;
+    margin-top: -13%;
     border-radius: 100%;
 
 }
@@ -120,6 +182,32 @@
     border-top-right-radius: 100%;
 }
 
+@media(max-width:1080px){
+    .belowBody
+{
+    display: block;
+    position: relative;
+    background-color: black;
+    height: 100px;
+    margin-top: -10%;
+    border-top-left-radius: 100%;
+    border-top-right-radius: 100%;
+}
+}
+
+@media(max-width:769px){
+    .belowBody
+{
+    display: block;
+    position: relative;
+    background-color: black;
+    height: 100px;
+    margin-top: -24%;
+    border-top-left-radius: 100%;
+    border-top-right-radius: 100%;
+}
+}
+
 .belowHead
 {
     position: relative;
@@ -128,6 +216,17 @@
     margin-top: -3%;
 }
 
+@media(max-width:768px){
+    .belowHead
+{
+    position: relative;
+    background-color: black;
+    height: 1000px;
+    margin-top: -6%;
+}
+}
+
+
 .head2
 {
     color: white;
@@ -135,3 +234,4 @@
     font-size: x-large;
     font-weight: bolder;
 }
+
