--- a/src/Password.css
+++ b/src/Password.css
@@ -88,13 +88,10 @@
     width: 30%;
 }
 
-@media(max-width:768px)
-{
-    .password-base-content
-{
-    width: 80%;
-}
-
+@media(max-width:720px){
+    .password-base-content{
+        width: 60%;
+    }
 }
 
 
@@ -102,7 +99,7 @@
 {
     .password-base-content
 {
-    width: 40%;
+    width: 50%;
 }
 
 }
@@ -118,7 +115,7 @@
 {
     .welcome
 {
-    font-size: x-large;
+    font-size: large;
     font-weight: bolder;
 }
 }
